Place all functions in load_schedule.py, start disaggregating code

--- a/load_schedule.ipynb
+++ b/load_schedule.ipynb
@@ -88,6 +88,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bs4.element.Tag'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data = rl.get(requests.get, \"https://www.basketball-reference.com\")\n",
+    "# if not data:\n",
+    "#     print(\"Couldn't get information in learn_teams() function!\")\n",
+    "# data = data.text\n",
+    "# soup = BeautifulSoup(data, 'html.parser')\n",
+    "print(type(get_ith_table(soup, 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bs4.BeautifulSoup'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(soup))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 231,
    "metadata": {},
    "outputs": [],
@@ -159,6 +198,53 @@
    "execution_count": 234,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting to the PostgreSQL database...\n"
+     ]
+    }
+   ],
+   "source": [
+    "pgc = PgConnection(config)\n",
+    "conn = pgc.getConn()\n",
+    "cur = pgc.getCurs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_debut_season(exp : str) -> int:\n",
+    "    num = int(exp.replace('R','0'))\n",
+    "    return YEAR - num\n",
+    "\n",
+    "def process_height(ht : str) -> int:\n",
+    "    ht_split = ht.split('-')\n",
+    "    ft, inch = ht_split[0], ht_split[1]\n",
+    "    return int(ft) * 12 + int(inch)\n",
+    "\n",
+    "def process_name(name : str) -> str:\n",
+    "    if name[-4:] == '(TW)':\n",
+    "        return name[:-4].strip()\n",
+    "    return name.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def process_player_table(player_table):\n",
     "    table = player_table\n",
@@ -188,68 +274,8 @@
     "       column_names.append(column_names[val] + '_link')\n",
     "\n",
     "    df = pd.DataFrame(data[1:], columns= column_names)\n",
-    "    return df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 356,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to the PostgreSQL database...\n"
-     ]
-    }
-   ],
-   "source": [
-    "pgc = PgConnection(config)\n",
-    "conn = pgc.getConn()\n",
-    "cur = pgc.getCurs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 357,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loadToRoster():\n",
-    "    pass\n",
+    "    return df\n",
     "\n",
-    "def checkPlayerDatabase(row):\n",
-    "    player = row['Player']\n",
-    "    birth_dt = row['Birth Date']\n",
-    "    qry = \"SELECT player_id FROM player WHERE player_name = %(player)s and dob = %(birth_dt)s\"\n",
-    "    res = cur.execute(qry, {'player' : player, 'birth_dt' : birth_dt})\n",
-    "    if res is None:\n",
-    "        return None\n",
-    "    else:\n",
-    "        return res[0][0]\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 358,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_debut_season(exp : str) -> int:\n",
-    "    num = int(exp.replace('R','0'))\n",
-    "    return YEAR - num\n",
-    "\n",
-    "def process_height(ht : str) -> int:\n",
-    "    ht_split = ht.split('-')\n",
-    "    ft, inch = ht_split[0], ht_split[1]\n",
-    "    return int(ft) * 12 + int(inch)\n",
-    "\n",
-    "def process_name(name : str) -> str:\n",
-    "    if name[-4:] == '(TW)':\n",
-    "        return name[:-4].strip()\n",
-    "    return name.strip()\n",
     "\n",
     "def process_rows_for_player(df):\n",
     "    rows = []\n",
@@ -264,15 +290,8 @@
     "                row['College'],\n",
     "                row['Player_link'])\n",
     "        rows.append(out)\n",
-    "    return rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 359,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return rows\n",
+    "\n",
     "def process_rows_for_roster(df, tm):\n",
     "    rows = []\n",
     "    for num, row in df.iterrows():\n",
@@ -285,8 +304,15 @@
     "                row['No.'],\n",
     "                row['Pos'])\n",
     "        rows.append(out)\n",
-    "    return rows\n",
-    "\n",
+    "    return rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def players_to_db(tups):\n",
     "    args = ','.join(cur.mogrify(\"(%s,%s,%s,%s,%s,%s,%s,%s,%s)\", i).decode('utf-8') for i in tups)\n",
     "    qry = \"INSERT INTO player VALUES \" + (args) + \" ON CONFLICT (player_name, dob, height, weight) DO NOTHING\"\n",
