Finish teamRosterReader class

--- a/load_schedule.ipynb
+++ b/load_schedule.ipynb
@@ -195,10 +195,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 365,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "requests.models.Response"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(requests.get('http://www.espn.com'))"
+   ]
   },
   {
    "cell_type": "code",
