Finishing up requestLimiter with # of requests > limit, currently stuck b/c went over though

--- a/load_schedule.ipynb
+++ b/load_schedule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,25 +439,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 420,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'Boston Celtics': 'https://www.basketball-reference.com/teams/BOS/2023.html', \n",
+    "'Sacramento Kings': 'https://www.basketball-reference.com/teams/SAC/2023.html', \n",
+    "'Utah Jazz': 'https://www.basketball-reference.com/teams/UTA/2023.html', \n",
+    "'New Orleans Pelicans': 'https://www.basketball-reference.com/teams/NOP/2023.html', \n",
+    "'Los Angeles Lakers': 'https://www.basketball-reference.com/teams/LAL/2023.html', \n",
+    "'Golden State Warriors': 'https://www.basketball-reference.com/teams/GSW/2023.html', \n",
+    "'Denver Nuggets': 'https://www.basketball-reference.com/teams/DEN/2023.html', \n",
+    "'Oklahoma City Thunder': 'https://www.basketball-reference.com/teams/OKC/2023.html', \n",
+    "'Memphis Grizzlies': 'https://www.basketball-reference.com/teams/MEM/2023.html', \n",
+    "'Indiana Pacers': 'https://www.basketball-reference.com/teams/IND/2023.html', \n",
+    "'Atlanta Hawks': 'https://www.basketball-reference.com/teams/ATL/2023.html', \n",
+    "'Chicago Bulls': 'https://www.basketball-reference.com/teams/CHI/2023.html', \n",
+    "'Minnesota Timberwolves': 'https://www.basketball-reference.com/teams/MIN/2023.html', \n",
+    "'Brooklyn Nets': 'https://www.basketball-reference.com/teams/BRK/2023.html', \n",
+    "'New York Knicks': 'https://www.basketball-reference.com/teams/NYK/2023.html', \n",
+    "'Phoenix Suns': 'https://www.basketball-reference.com/teams/PHO/2023.html', \n",
+    "'Philadelphia 76ers': 'https://www.basketball-reference.com/teams/PHI/2023.html', \n",
+    "'Dallas Mavericks': 'https://www.basketball-reference.com/teams/DAL/2023.html', \n",
+    "'Portland Trail Blazers': 'https://www.basketball-reference.com/teams/POR/2023.html', \n",
+    "'Milwaukee Bucks': 'https://www.basketball-reference.com/teams/MIL/2023.html', \n",
+    "'Washington Wizards': 'https://www.basketball-reference.com/teams/WAS/2023.html', \n",
+    "'San Antonio Spurs': 'https://www.basketball-reference.com/teams/SAS/2023.html', \n",
+    "'Charlotte Hornets': 'https://www.basketball-reference.com/teams/CHO/2023.html', \n",
+    "'Detroit Pistons': 'https://www.basketball-reference.com/teams/DET/2023.html', \n",
+    "'Cleveland Cavaliers': 'https://www.basketball-reference.com/teams/CLE/2023.html', \n",
+    "'Toronto Raptors': 'https://www.basketball-reference.com/teams/TOR/2023.html', \n",
+    "'Orlando Magic': 'https://www.basketball-reference.com/teams/ORL/2023.html', \n",
+    "'Houston Rockets': 'https://www.basketball-reference.com/teams/HOU/2023.html', \n",
+    "'Los Angeles Clippers': 'https://www.basketball-reference.com/teams/LAC/2023.html', \n",
+    "'Miami Heat': 'https://www.basketball-reference.com/teams/MIA/2023.html'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INSERT INTO player VALUES (DEFAULT, 'Derrick White',NULL,2018,76,190,'July 2, 1994','US','Colorado-Colorado Springs, Colorado','/players/w/whitede01.html'),(DEFAULT, 'Sam Hauser',NULL,2022,80,215,'December 8, 1997','US','Marquette, Virginia','/players/h/hausesa01.html'),(DEFAULT, 'Grant Williams',NULL,2020,78,236,'November 30, 1998','US','Tennessee','/players/w/willigr01.html'),(DEFAULT, 'Jayson Tatum',NULL,2018,80,210,'March 3, 1998','US','Duke','/players/t/tatumja01.html'),(DEFAULT, 'Jaylen Brown',NULL,2017,78,223,'October 24, 1996','US','California','/players/b/brownja02.html'),(DEFAULT, 'Marcus Smart',NULL,2015,75,220,'March 6, 1994','US','Oklahoma State','/players/s/smartma01.html'),(DEFAULT, 'Malcolm Brogdon',NULL,2017,77,229,'December 11, 1992','US','Virginia','/players/b/brogdma01.html'),(DEFAULT, 'Luke Kornet',NULL,2018,86,250,'July 15, 1995','US','Vanderbilt','/players/k/kornelu01.html'),(DEFAULT, 'Al Horford',NULL,2008,81,240,'June 3, 1986','DO','Florida','/players/h/horfoal01.html'),(DEFAULT, 'Payton Pritchard',NULL,2021,73,195,'January 28, 1998','US','Oregon','/players/p/pritcpa01.html'),(DEFAULT, 'Noah Vonleh',NULL,2016,82,257,'August 24, 1995','US','Indiana','/players/v/vonleno01.html'),(DEFAULT, 'Blake Griffin',NULL,2011,81,250,'March 16, 1989','US','Oklahoma','/players/g/griffbl01.html'),(DEFAULT, 'Justin Jackson',NULL,2018,80,220,'March 28, 1995','US','UNC','/players/j/jacksju01.html'),(DEFAULT, 'Robert Williams',NULL,2019,81,237,'October 17, 1997','US','Texas A&M','/players/w/williro04.html'),(DEFAULT, 'JD Davison  (TW)',NULL,2023,75,195,'October 3, 2002','US','Alabama','/players/d/davisjd01.html'),(DEFAULT, 'Mfiondu Kabengele  (TW)',NULL,2021,81,250,'August 14, 1997','CA','Florida State','/players/k/kabenmf01.html'),(DEFAULT, 'Danilo Gallinari',NULL,2010,82,233,'August 8, 1988','IT',NULL,'/players/g/gallida01.html')\n"
+      "Successfully loaded previous Rate Limiter info for https://www.espn.com\n",
+      "Initialized with 3 of 20 entries filled\n",
+      "\n",
+      "Saving RequestLimiter status to disk...\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "rl = RequestLimiter(base_link = 'https://www.espn.com' ,\n",
+    "                    interval = 60, # in seconds\n",
+    "                    limit  = 20, \n",
+    "                    load  = './data/rl/espn.com.p')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get() got an unexpected keyword argument 'waitForPop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kniu91/Documents/Kevin's Folders/Projects/dfs/rds/load_schedule.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y123sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rl\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39mhttps://www.espn.com\u001b[39;49m\u001b[39m'\u001b[39;49m, waitForPop \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/Documents/Kevin's Folders/Projects/dfs/rds/requestLimiter.py:21\u001b[0m, in \u001b[0;36mwrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mRequestLimiter\u001b[39;00m():\n\u001b[1;32m     17\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39m    i. Static save decorator\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39m        -Before Constructor\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m_save\u001b[39m(\u001b[39mself\u001b[39m, name \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./data/rl/\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     22\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m name:\n\u001b[1;32m     23\u001b[0m             name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m:]\n",
+      "\u001b[0;31mTypeError\u001b[0m: get() got an unexpected keyword argument 'waitForPop'"
+     ]
+    }
+   ],
+   "source": [
+    "rl.get('https://www.espn.com', waitForPop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get() takes 3 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kniu91/Documents/Kevin's Folders/Projects/dfs/rds/load_schedule.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y120sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m20\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y120sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m1\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y120sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     rl\u001b[39m.\u001b[39;49mget(requests\u001b[39m.\u001b[39;49mget,\u001b[39m'\u001b[39;49m\u001b[39mhttps://www.espn.com\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/Documents/Kevin's Folders/Projects/dfs/rds/requestLimiter.py:21\u001b[0m, in \u001b[0;36mwrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mRequestLimiter\u001b[39;00m():\n\u001b[1;32m     17\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39m    i. Static save decorator\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39m        -Before Constructor\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m_save\u001b[39m(\u001b[39mself\u001b[39m, name \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./data/rl/\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     22\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m name:\n\u001b[1;32m     23\u001b[0m             name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m:]\n",
+      "\u001b[0;31mTypeError\u001b[0m: get() takes 3 positional arguments but 4 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# import time\n",
+    "for i in range(20):\n",
+    "    time.sleep(1)\n",
+    "    rl.get(requests.get,'https://www.espn.com', True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully processed append to queue...\n",
+      "Size of current queue... 19\n",
+      "Saving RequestLimiter status to disk...\n",
+      "Successfully processed append to queue...\n",
+      "Size of current queue... 20\n",
+      "Saving RequestLimiter status to disk...\n",
+      "You're about to go over the limit, you'll have to wait!\n",
+      "Saving RequestLimiter status to disk...\n",
+      "You're about to go over the limit, you'll have to wait!\n",
+      "Saving RequestLimiter status to disk...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kniu91/Documents/Kevin's Folders/Projects/dfs/rds/load_schedule.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y122sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m20\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y122sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m1\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kniu91/Documents/Kevin%27s%20Folders/Projects/dfs/rds/load_schedule.ipynb#Y122sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     rl\u001b[39m.\u001b[39mget(requests\u001b[39m.\u001b[39mget,\u001b[39m'\u001b[39m\u001b[39mhttps://www.espn.com\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20):\n",
+    "    time.sleep(1)\n",
+    "    rl.get(requests.get,'https://www.espn.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if not ('a' and True):\n",
+    "    print('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Boston Celtics...\n",
+      "Processing Sacramento Kings...\n",
+      "Processing Utah Jazz...\n",
+      "Processing New Orleans Pelicans...\n",
+      "Processing Los Angeles Lakers...\n",
+      "Processing Golden State Warriors...\n",
+      "Processing Denver Nuggets...\n",
+      "Processing Oklahoma City Thunder...\n",
+      "Processing Memphis Grizzlies...\n",
+      "Processing Indiana Pacers...\n",
+      "Processing Atlanta Hawks...\n",
+      "Processing Chicago Bulls...\n",
+      "Processing Minnesota Timberwolves...\n",
+      "Processing Brooklyn Nets...\n",
+      "Processing New York Knicks...\n",
+      "Processing Phoenix Suns...\n",
+      "Processing Philadelphia 76ers...\n",
+      "Processing Dallas Mavericks...\n",
+      "Processing Portland Trail Blazers...\n",
+      "Processing Milwaukee Bucks...\n",
+      "Processing Washington Wizards...\n",
+      "Processing San Antonio Spurs...\n",
+      "Processing Charlotte Hornets...\n",
+      "Processing Detroit Pistons...\n",
+      "Processing Cleveland Cavaliers...\n",
+      "Processing Toronto Raptors...\n",
+      "Processing Orlando Magic...\n",
+      "Processing Houston Rockets...\n",
+      "Processing Los Angeles Clippers...\n",
+      "Processing Miami Heat...\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_a = set(a.keys())\n",
+    "for k in a.keys():\n",
+    "    print(f\"Processing {k}...\")\n",
+    "    set_a.remove(k)\n",
+    "print(set_a)\n"
+   ]
   },
   {
    "cell_type": "code",
